# tetris.rs

./: Cargo.toml  LICENSE  README.md  cobertura.xml
.github/workflows/: build.yaml
src/: core.rs  main.rs  shape.rs  tetromino.rs  ui.rs
