[package]
name = "tetris-rs"
version = "0.1.0"
authors = ["xvm32 <xvm32@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = { version = "5.101.0", features = ["wide"] }
rand = "0.8.3"
strum = "0.20.0"
strum_macros = "0.20.1"
